# MOTOR-MANAGER

./: CMakeLists.txt  README.md  motor_managerConfig.cmake  package.xml
communications/ethercat/src/: ethercat_controller.cpp
config/: example.yaml
core/motor_interface/include/motor_interface/: motor_controller.hpp  motor_driver.hpp
hardware/minas/src/: minas_driver.cpp
hardware/zeroerr/src/: zeroerr_driver.cpp
include/motor_manager/: motor_manager.hpp  types.hpp
include/motor_manager/controller/: ethercat_controller.hpp
include/motor_manager/core/: motor_controller.hpp  motor_driver.hpp  motor_master.hpp
include/motor_manager/driver/: minas_driver.hpp
include/motor_manager/master/: ethercat_master.hpp
motor_manager/src/: motor_manager.cpp
param/: minas_a6.yaml
src/: ethercat_controller.cpp  ethercat_master.cpp  minas_driver.cpp  motor_manager.cpp
test/: test.cpp
