<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_manager</name>
  <version>0.0.0</version>
  <description>Motor manager for Micros</description>
  <maintainer email="seonilchoi98@gmail.com">csi</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>micros_common_type</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>